# aws-cloudmap-prometheus-sd-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  config.example.json  config.json  docker-compose.yml  health-check.sh  prometheus.yml
src/: config.rs  discovery.rs  handlers.rs  main.rs
