[package]
name = "aws-cloudmap-prometheus-sd-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.1"
aws-sdk-servicediscovery = "1.13"
